lista treinos certo em pagina d modalidades

--- a/views/cria_treino.ejs
+++ b/views/cria_treino.ejs
@@ -159,11 +159,11 @@
           <label class="control-label col-sm-2" for="dia">Dia:</label>
           <div class="col-sm-10">          
             <select type="select" class="form-control" id="dia" name="dia">
-              <option value="Segunda">Segunda-feira</option>
-              <option value="Segunda">Terça-feira</option>
-              <option value="Segunda">Quarta-feira</option>
-              <option value="Segunda">Quinta-feira</option>
-              <option value="Segunda">Sexta-feira</option>
+              <option value="Segunda-feira">Segunda-feira</option>
+              <option value="Terça-feira">Terça-feira</option>
+              <option value="Quarta-feira">Quarta-feira</option>
+              <option value="Quinta-feira">Quinta-feira</option>
+              <option value="Sexta-feira">Sexta-feira</option>
             </select>
           </div>
         </div>
