--- a/views/index.ejs
+++ b/views/index.ejs
@@ -258,6 +258,12 @@
             document.getElementById("cria_atleta").onclick = function () {
               location.href = "novo_atleta";
             };
+          </script><br>
+          <center><button align="center" id="gerencia_atletas" href="gerencia_atletas" type="submit">Gerenciar atleta</button></center>
+          <script type="text/javascript">
+            document.getElementById("gerencia_atletas").onclick = function () {
+              location.href = "gerencia_atletas";
+            };
           </script>
         </div>
       </div>
@@ -277,6 +283,12 @@
           <script type="text/javascript">
             document.getElementById("cria_tecnico").onclick = function () {
               location.href = "novo_tecnico";
+            };
+          </script><br>
+           <center><button align="center" id="gerencia_tecnicos" href="gerencia_tecnicos" type="submit">Gerenciar técnicos</button></center>
+          <script type="text/javascript">
+            document.getElementById("gerencia_tecnicos").onclick = function () {
+              location.href = "gerencia_tecnicos";
             };
           </script>
         </div>
