--- a/views/index.ejs
+++ b/views/index.ejs
@@ -188,8 +188,7 @@
             <div class="jogo-wrap">
               <figure>
                 <img src="img/jogos/app1.jpg" class="img-fluid" alt="">
-                <a href="img/jogos/app1.jpg" data-lightbox="jogo" data-title="Sabado" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a href="jogo/<%=jogo[i].ID_Jogo%>" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="jogo-info">
