--- a/views/modalidade.ejs
+++ b/views/modalidade.ejs
@@ -154,11 +154,8 @@
           <div class="col-lg-4 col-md-8 wow" align="center">
             <div>
               <h4>Técnico:</h4>
-              <% for(var j=0; j < tecnico.length; j++) { %>
-              <p><%=tecnico[j].Nome%></p>
-              <h4>Salário:</h4>
-              <p>R$ <%=tecnico[j].Salario%> </p>
-              <%}%>
+              <p>Nome do técnico</p>
+              <center><button align="center" id="cria_treino" href="novo_treino" type="submit">Adicionar Técnico</button></center><br>
             </div>
           </div>
         </div>
@@ -176,21 +173,57 @@
         </div>
 
         <div class="row">
-        <!-- AQUI VAI TER QUE FAZER UM FOR PELAS MODALIDADES -->
-        <%for (var i = 0; i < atletas.length ; i++){ %>
+        <% for(var atleta=0; atleta < atletas.length; atleta++) { %>
           <div class="col-lg-2 col-md-6 wow fadeInUp">
             <div class="mod">
-              <img src="/img/atleta.png" class="img-fluid" alt="">
+              <img src="/img/mod-1.jpg" class="img-fluid" alt="">
               <div class="mod-info">
                 <div class="mod-info-content">
-                  <h4><%=atletas[i].Nome%></h4>
-                  <span><%=atletas[i].Curso%></span>
+                  <h4>Nome do Atleta</h4>
+                  <span>4 treinos</span>
                 </div>
               </div>
             </div>
           </div>
-        <%}%>
-      </div>    
+
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="mod">
+              <img src="/img/mod-2.jpg" class="img-fluid" alt="">
+              <div class="mod-info">
+                <div class="mod-info-content">
+                  <h4>Handebol</h4>
+                  <span>Feminino</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="mod">
+              <img src="/img/mod-3.jpg" class="img-fluid" alt="">
+              <div class="mod-info">
+                <div class="mod-info-content">
+                  <h4>Futsal</h4>
+                  <span>Masculino</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="mod">
+              <img src="/img/mod-4.jpg" class="img-fluid" alt="">
+              <div class="mod-info">
+                <div class="mod-info-content">
+                  <h4>Voleibol</h4>
+                  <span>Masculino</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <center><button align="center" id="adiciona_atleta" href="adiciona_atleta" type="submit">Adicionar Atleta</button></center><br>
+      </div>
     </section><!-- #modalidades -->
 
   </main>
