--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
           <li><a href="#treino">Treinos</a></li>
           <li><a href="#atleta">Atletas</a></li>
           <li><a href="#tecnico">Técnicos</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -159,6 +159,7 @@
                   <span>Caixinha: <%=modalidades[modalidade].Caixinha%> reais</span>
                   <div class="social">
                     <a href="modalidade/<%=modalidades[modalidade].Nome%>"><i class="ion ion-eye"></i></a>
+                    <a href="deleta/<%=modalidades[modalidade].Nome%>"><i class="ion-ios-trash"></i></a>
                   </div>
                 </div>
               </div>
