--- a/views/index.ejs
+++ b/views/index.ejs
@@ -191,7 +191,8 @@
                 <img src="img/jogos/app1.jpg" class="img-fluid" alt="">
                 <div class="social" align="center">
                   <center><a href="jogo/<%=jogo[i].ID_Jogo%>" ><i class="ion ion-eye"></i></a>
-                  <a href="deleta_jogo/<%=jogo[i].ID_Jogo%>"><i class="ion-ios-trash"></i></a></center>
+                  <a href="deleta_jogo/<%=jogo[i].ID_Jogo%>"><i class="ion-ios-trash"></i></a>
+                  <a href="edita_jogo/<%=jogo[i].ID_Jogo%>"><i class="ion-edit"></i></a></center>
                 </div>
               </figure>
 
